[package]
name = "pico_rust_devcontainer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
panic-halt = "0.2.0"
rp2040-boot2 = "0.2.1"
rp2040-hal = "0.7.0"
cortex-m-rt = "0.7.2"
cortex-m = "0.7.7"

